package mastermind.models;

public class ProposedCombination extends Combination {

    public void add(Color color){
        colors.add(color);
    }

}
