package mastermind.types;

public enum StateValue {
    START,
    PROPOSE,
    RESUME,
    EXIT;
}
